[gd_scene format=3 uid="uid://d6ymygx25fih"]

[ext_resource type="Theme" uid="uid://b713thhl0tehm" path="res://themes/main_menu.tres" id="1_vgm8m"]
[ext_resource type="Texture2D" uid="uid://r7wycdrpjpps" path="res://assets/visual/ui/main_menu/menu_background.jpg" id="2_p7c2r"]
[ext_resource type="Script" uid="uid://dtk65d7eihlkc" path="res://scenes/menus/level_select.gd" id="2_vgm8m"]
[ext_resource type="Texture2D" uid="uid://iwff1rpba7k4" path="res://assets/visual/ui/album_arts/chart_album_art.jpg" id="4_p7c2r"]
[ext_resource type="Texture2D" uid="uid://cyy8eihq673lt" path="res://assets/visual/ui/album_arts/stars_on_map_album_art.jpg" id="5_pwdrg"]

[node name="LevelSelect" type="Control" unique_id=1664080643]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vgm8m")
script = ExtResource("2_vgm8m")

[node name="BG" type="TextureRect" parent="." unique_id=538344818]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_p7c2r")

[node name="HBoxContainer" type="VBoxContainer" parent="." unique_id=635777844]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="HBoxContainer" unique_id=1858144404]
layout_mode = 2
size_flags_horizontal = 0
text = "Return"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" unique_id=198890573]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 92

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer" unique_id=1593005485]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 64
columns = 2

[node name="Cover1" type="TextureRect" parent="HBoxContainer/MarginContainer/GridContainer" unique_id=1503091846]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_p7c2r")
expand_mode = 3
stretch_mode = 4

[node name="Cover2" type="TextureRect" parent="HBoxContainer/MarginContainer/GridContainer" unique_id=47702415]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_pwdrg")
expand_mode = 3
stretch_mode = 5

[node name="Level1" type="Button" parent="HBoxContainer/MarginContainer/GridContainer" unique_id=563488009]
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="Level2" type="Button" parent="HBoxContainer/MarginContainer/GridContainer" unique_id=1655806509]
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[connection signal="pressed" from="HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/GridContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/GridContainer/Level2" to="." method="_on_level_2_pressed"]
